--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <header class="pb-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
         <img src="logo.png" width="30%"/>
-        <span class="fs-4">ePastillero</span>
+        <span class="fs-4">ePastillero (la aplicación que te ayuda a recordar tus pastillas)</span>
       </a>
     </header>
 
